Regression: Gizmos became significantly harder to use (in orthographic view) #97120

Closed
opened 2022-04-06 19:46:07 +02:00 by Ilya Zmetnyy · 10 comments

System Information
Operating system: Fedora 35 Linux (Xfce)
Graphics card: GTX 750 Ti

Blender Version
Broken: 3.1. Caused by {0cb5eae9d0617abedf745753c23061ddfcfd1416}
Situation for the lines improved in 49fc4449e7 again, but the boxes/spheres/... on the end of the gizmo are still bad
Worked: 2.93

Short description of error
I've already reported this bug before and we archived it after I reset the settings to factory settings but now I realized that the problem is still there even with the default settings. It's just that it only happens in orthographic view, for some reason.
Using gizmos on a fixed axis only works from certain angles. Sometimes it's impossible, sometimes pixel perfect, sometimes works fine.
2022-04-06 20-10-20.mp4

Exact steps for others to reproduce the error

  • Open attached file or:
    • With the default Cube go to Edit Mode
    • Enable orthographic view.
    • Try to use the Scale Tool or Extrude Tool with XYZ setting.
    • Try various different angles. Some of them won't work
  • Try to use the Blue axis
    select_gizmo_ortho_bug.blend
**System Information** Operating system: Fedora 35 Linux (Xfce) Graphics card: GTX 750 Ti **Blender Version** Broken: 3.1. Caused by {0cb5eae9d0617abedf745753c23061ddfcfd1416} Situation for the lines improved in 49fc4449e7 again, but the boxes/spheres/... on the end of the gizmo are still bad Worked: 2.93 **Short description of error** I've already reported this bug before and we archived it after I reset the settings to factory settings but now I realized that the problem is still there even with the default settings. It's just that it only happens in orthographic view, for some reason. Using gizmos on a fixed axis only works from certain angles. Sometimes it's impossible, sometimes pixel perfect, sometimes works fine. [2022-04-06 20-10-20.mp4](https://archive.blender.org/developer/F12978910/2022-04-06_20-10-20.mp4) **Exact steps for others to reproduce the error** - Open attached file or: - With the default Cube go to Edit Mode - Enable orthographic view. - Try to use the Scale Tool or Extrude Tool with XYZ setting. - Try various different angles. Some of them won't work - Try to use the Blue axis [select_gizmo_ortho_bug.blend](https://archive.blender.org/developer/F12978972/select_gizmo_ortho_bug.blend)
Author

Added subscriber: @Ilya-7

Added subscriber: @Ilya-7

#97300 was marked as duplicate of this issue

#97300 was marked as duplicate of this issue
Germano Cavalcante changed title from Gizmos became significantly harder to use (in orthographic view) to Regression: Gizmos became significantly harder to use (in orthographic view) 2022-04-06 20:15:43 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report, I can confirm.
I'll try to find the commit that introduced the problem.

Thanks for the report, I can confirm. I'll try to find the commit that introduced the problem.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

0cb5eae9d0 is the first bad commit

0cb5eae9d0617abedf745753c23061ddfcfd1416 is the first bad commit
Member

Added subscribers: @LalaGhost, @PratikPB2123, @lichtwerk

Added subscribers: @LalaGhost, @PratikPB2123, @lichtwerk

This issue was referenced by cc8fe1a1cb

This issue was referenced by cc8fe1a1cbc63db66c038773b070dca14e82cebb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-04-29 08:22:36 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97120
No description provided.