Fix T97120: Gizmo fails to select in orthographic view

Regression in exposed by 49fc4449e734842cc3ccd797e6ece73ea64f34e4.